--- a/front-end/style.css
+++ b/front-end/style.css
@@ -42,6 +42,21 @@ body {
     color: rgb(248, 248, 248);
 }
 
+#logout-btn {
+      float: right;
+      padding: 0.5rem 1rem;
+      background-color: var(--error);
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    #logout-btn:hover {
+      background-color: #c0392b;
+    }
+    
 .header h1 {
     font-size: 3rem;
     font-weight: 800;
