--- a/front-end/style.css
+++ b/front-end/style.css
@@ -29,6 +29,34 @@ body {
     line-height: 1.6;
 }
 
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.spinner {
+  border: 6px solid #fffcfc;
+  border-top: 6px solid #ff3700;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
